--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,8 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AsistenciaIntegrador">
-
+        android:theme="@style/Theme.AsistenciaIntegrador" >
         <!-- Tus actividades -->
         <activity
             android:name=".pantalla_login_verificar_correo"
@@ -30,9 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".mis_servicios"
-            android:exported="false" />
-
-        <!-- Actividades de Gerardo -->
+            android:exported="false" /> <!-- Actividades de Gerardo -->
         <activity
             android:name=".figure_12"
             android:exported="false" />
@@ -44,25 +41,25 @@
             android:exported="false" />
         <activity
             android:name=".figure_9"
-            android:exported="false" />
-
-        <!-- Comunes -->
+            android:exported="false" /> <!-- Comunes -->
         <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
             android:name=".pantalla_carga"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
