--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,56 +11,46 @@
         android:theme="@style/Theme.AsistenciaIntegrador" >
         <!-- Tus actividades -->
         <activity
-            android:name=".pantalla_login_verificar_correo"
-            android:exported="false" />
+            android:name=".pantalla_carga"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
-            android:name=".pantalla_login_recuperar"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_login_inicio_sesion"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_carga_inicio"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".pantalla_de_informacion"
             android:exported="false" />
         <activity
-            android:name=".mis_servicios"
-            android:exported="false" /> <!-- Actividades de Gerardo -->
-        <activity
-            android:name=".figure_12"
+            android:name=".pantalla_carga_inicio"
             android:exported="false" />
         <activity
-            android:name=".figure_11"
+            android:name=".pantalla_login_inicio_sesion"
+            android:exported="false" />
+        <activity
+            android:name=".pantalla_login_recuperar"
+            android:exported="false" />
+        <activity
+            android:name=".mis_servicios"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
             android:exported="false" />
         <activity
             android:name=".figure_10"
             android:exported="false" />
         <activity
-            android:name=".figure_9"
-            android:exported="false" /> <!-- Comunes -->
-        <activity
-            android:name=".MainActivity2"
+            android:name=".Comunicados"
             android:exported="false" />
         <activity
-            android:name=".pantalla_carga"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
+            android:name=".PreguntasFrecuentes"
+            android:exported="false" />
     </application>
 
 </manifest>
