--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,57 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AsistenciaIntegrador" >
-        <!-- Tus actividades -->
-        <activity
-<<<<<<< Updated upstream
-=======
-            android:name=".pantalla_login_verificar_correo"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_login_recuperar"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_login_inicio_sesion"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_carga_inicio"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_de_informacion"
-            android:exported="false" />
-        <activity
-            android:name=".mis_servicios"
-            android:exported="false" />
+        android:theme="@style/Theme.AsistenciaIntegrador">
 
-        <!-- Actividades de Gerardo -->
+        <!-- Pantalla de carga (launcher) -->
         <activity
-            android:name=".figure_12"
-            android:exported="false" />
-        <activity
-            android:name=".figure_11"
-            android:exported="false" />
-        <activity
-            android:name=".figure_10"
-            android:exported="false" />
-        <activity
-            android:name=".figure_9"
-            android:exported="false" />
-
-        <!-- Comunes -->
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-
-        <activity
->>>>>>> Stashed changes
             android:name=".pantalla_carga"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.NoActionBar"
@@ -62,42 +24,26 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_de_informacion"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_carga_inicio"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_login_inicio_sesion"
-            android:exported="false" />
-        <activity
-            android:name=".pantalla_login_recuperar"
-            android:exported="false" />
-        <activity
-            android:name=".mis_servicios"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".figure_10"
-            android:exported="false" />
-        <activity
-            android:name=".Comunicados"
-            android:exported="false" />
-        <activity
-            android:name=".PreguntasFrecuentes"
-            android:exported="false" />
-    </application>
-<<<<<<< Updated upstream
+        <!-- Otras actividades únicas -->
+        <activity android:name=".pantalla_login_verificar_correo" android:exported="false" />
+        <activity android:name=".pantalla_login_recuperar" android:exported="false" />
+        <activity android:name=".pantalla_login_inicio_sesion" android:exported="false" />
+        <activity android:name=".pantalla_carga_inicio" android:exported="false" />
+        <activity android:name=".pantalla_de_informacion" android:exported="false" />
+        <activity android:name=".mis_servicios" android:exported="false" />
+        <activity android:name=".figure_12" android:exported="false" />
+        <activity android:name=".figure_11" android:exported="false" />
+        <activity android:name=".figure_10" android:exported="false" />
+        <activity android:name=".figure_9" android:exported="false" />
+        <activity android:name=".MainActivity2" android:exported="false" />
+        <activity android:name=".MainActivity" android:exported="false" />
+        <activity android:name=".Comunicados" android:exported="false" />
+        <activity android:name=".PreguntasFrecuentes" android:exported="false" />
 
-</manifest>
-=======
+    </application>
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 </manifest>
->>>>>>> Stashed changes
+
+
