--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,40 +16,69 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AsistenciaIntegrador">
-
+        android:theme="@style/Theme.AsistenciaIntegrador"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".pantalla_administrador_mis_servicios"
+            android:exported="false" />
         <!-- Pantalla de carga (launcher) -->
         <activity
             android:name=".pantalla_carga"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Otras actividades únicas -->
-        <activity android:name=".pantalla_login_verificar_correo" android:exported="false" />
-        <activity android:name=".pantalla_login_recuperar" android:exported="false" />
-        <activity android:name=".pantalla_login_inicio_sesion" android:exported="false" />
-        <activity android:name=".pantalla_carga_inicio" android:exported="false" />
-        <activity android:name=".pantalla_de_informacion" android:exported="false" />
-        <activity android:name=".mis_servicios" android:exported="false" />
-        <activity android:name=".figure_12" android:exported="false" />
-        <activity android:name=".figure_11" android:exported="false" />
-        <activity android:name=".figure_10" android:exported="false" />
-        <activity android:name=".figure_9" android:exported="false" />
-        <activity android:name=".MainActivity2" android:exported="false" />
-        <activity android:name=".MainActivity" android:exported="false" />
-        <activity android:name=".Comunicados" android:exported="false" />
-        <activity android:name=".PreguntasFrecuentes" android:exported="false" />
-
+        </activity> <!-- Otras actividades únicas -->
+        <activity
+            android:name=".pantalla_login_verificar_correo"
+            android:exported="false" />
+        <activity
+            android:name=".pantalla_login_recuperar"
+            android:exported="false" />
+        <activity
+            android:name=".pantalla_login_inicio_sesion"
+            android:exported="false" />
+        <activity
+            android:name=".pantalla_carga_inicio"
+            android:exported="false" />
+        <activity
+            android:name=".pantalla_de_informacion"
+            android:exported="false" />
+        <activity
+            android:name=".mis_servicios"
+            android:exported="false" />
+        <activity
+            android:name=".figure_12"
+            android:exported="false" />
+        <activity
+            android:name=".figure_11"
+            android:exported="false" />
+        <activity
+            android:name=".figure_10"
+            android:exported="false" />
+        <activity
+            android:name=".figure_9"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Comunicados"
+            android:exported="false" />
+        <activity
+            android:name=".PreguntasFrecuentes"
+            android:exported="false" />
+        <activity android:name=".MainRegistrarColaborador" android:exported="false"/>
+        <activity android:name=".activity_pantalla_administrador_asignar_horarios" android:exported="false"/>
+        <activity android:name=".MainConfigurarAlertas" android:exported="false"/>
     </application>
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 </manifest>
-
-
