--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".pantalla_administrador_mis_servicios"
+            android:name=".infor_mensual_asistencia"
             android:exported="false" />
-        <!-- Pantalla de carga (launcher) -->
+        <activity
+            android:name=".pantalla_administrador_mis_servicios"
+            android:exported="false" /> <!-- Pantalla de carga (launcher) -->
         <activity
             android:name=".pantalla_carga"
             android:exported="true"
@@ -76,9 +78,15 @@
         <activity
             android:name=".PreguntasFrecuentes"
             android:exported="false" />
-        <activity android:name=".MainRegistrarColaborador" android:exported="false"/>
-        <activity android:name=".activity_pantalla_administrador_asignar_horarios" android:exported="false"/>
-        <activity android:name=".MainConfigurarAlertas" android:exported="false"/>
+        <activity
+            android:name=".MainRegistrarColaborador"
+            android:exported="false" />
+        <activity
+            android:name=".activity_pantalla_administrador_asignar_horarios"
+            android:exported="false" />
+        <activity
+            android:name=".MainConfigurarAlertas"
+            android:exported="false" />
     </application>
 
 </manifest>
