Commit archivos renombrados

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PruebaEliminar"
+            android:exported="false" />
+        <activity
             android:name=".infor_mensual_asistencia"
             android:exported="false" />
         <activity
@@ -52,7 +55,7 @@
             android:name=".pantalla_de_informacion"
             android:exported="false" />
         <activity
-            android:name=".mis_servicios"
+            android:name=".pantalla_empleado_mis_servicios"
             android:exported="false" />
         <activity
             android:name=".figure_12"
@@ -61,19 +64,19 @@
             android:name=".figure_11"
             android:exported="false" />
         <activity
-            android:name=".figure_10"
+            android:name=".pantalla_empelado_mis_servicios_horario"
             android:exported="false" />
         <activity
             android:name=".figure_9"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".pantalla_guardia_inicio_temporal"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".Comunicados"
+            android:name=".pantalla_empleado_mis_servicios_comunicados"
             android:exported="false" />
         <activity
             android:name=".PreguntasFrecuentes"
@@ -82,7 +85,7 @@
             android:name=".MainRegistrarColaborador"
             android:exported="false" />
         <activity
-            android:name=".activity_pantalla_administrador_asignar_horarios"
+            android:name=".pantalla_administrador_asignar_horarios"
             android:exported="false" />
         <activity
             android:name=".MainConfigurarAlertas"
